styles.css
body {
    text-align: center;
    background-color: #121212; /*var(--bg-color);*/
    color: #ddd;/*var(--text-color);*/
    text-shadow: -1px 1px 0 #000,
          1px 1px 0 #000,
          1px -1px 0 #000,
          -1px -1px 0 #000; /*var(--txt-shadow);*/
    font-family: 'Press Start 2P', sans-serif; /* Use a fallback font */
    background-image: url('pixelForest.png');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
  }
  /* Base styles for light and dark modes */
  /*
  :root {
    --bg-color: #f5f5f5; 
    --text-color: #333; 
    --txt-shadow: -1px 1px 0 #000,
				  1px 1px 0 #000,
				 1px -1px 0 #000,
				-1px -1px 0 #000;
  }
  .dark-mode {
    --bg-color: #121212; 
    --text-color: #ddd; 
    --txt-shadow: -1px 1px 0 #000,
				  1px 1px 0 #000,
				 1px -1px 0 #000,
				-1px -1px 0 #000;
  }*/
  p {
    margin-left: -2em;
  }
  header {
    position: relative;
    top: 450px;
    left: -35px;
    text-align: center;
  }
  .footer { 
    text-align: left;
    font-size: 11px;
    position: absolute; 
    bottom: 0; 
    left: 0; 
    z-index: 10;
  }
  a {
    color: var(--text-color);
	  text-shadow: -1px 1px 0 #000,
				  1px 1px 0 #000,
				 1px -1px 0 #000,
				-1px -1px 0 #000;
    text-decoration: none;
    background-color: none;
    color: var(--text-color);
    text-shadow: var(--txt-shadow);
  }
  header a i {
    visibility: hidden;
  }
  header a:hover i{
    visibility: visible;
  }

